@@ -1,7 +1,7 @@
 
 #
 # Arduino 0022 Makefile 
-# Uno with DOGS128 Shield
+# Uno with DOGS102 Shield
 #
 # written by olikraus@gmail.com
 #
