@@ -46,7 +46,7 @@ dogm128 Library ChangeLog
 	    strings located in flash ROM area (C interface).
 	* Introduced flash rom abstraction layer
 	* Tested with Arduino UNO and Arduino 0021 IDE
-2010-12-03	v1.07	Oliver Kraus <olikraus@gmail.com>
+2010-12-03	v1.07	Oliver Kraus <olikraus@gmail.com> 
 	* DOGM132-Shield fully supported by SpaceTrash.pde
 	* ATMEGA88: SPI support and examples
 	* Arduino Environment: Allow to select an IO port as chip select line
@@ -59,5 +59,8 @@ dogm128 Library ChangeLog
 	* Clean up and documentation of SPI abstraction layer
 	* Renamed DOG_ATTR_FN_INLINE to DOG_ATTR_FN_NOINLINE
 	* Tested with Arduino 0022 IDE
-	
+2011-02-06	v1.09	Oliver Kraus <olikraus@gmail.com>
+	* Little Rook Chess Example
+	* New Function: ClrBitmapP
+	* Throw error message if LCD is not defined (previous versions did use DOGM128 by default)
 	
